@@ -49,7 +49,7 @@ my $prereqs  = {
     'Web::Simple' => '0.020',
     'XML::Simple' => '2.18',
     'YAML::Tiny' => '1.62',
-    'namespace::sweep' => '0.006',
+    'namespace::autoclean' => '0.19',
     'perl' => '5.010001',
     'strictures' => '1.004004'
   },
