@@ -22,7 +22,7 @@ requires "Unexpected" => "v0.22.0";
 requires "Web::Simple" => "0.020";
 requires "XML::Simple" => "2.18";
 requires "YAML::Tiny" => "1.62";
-requires "namespace::sweep" => "0.006";
+requires "namespace::autoclean" => "0.19";
 requires "perl" => "5.010001";
 requires "strictures" => "1.004004";
 recommends "CSS::LESS" => "v0.0.3";
