@@ -2,7 +2,7 @@ name = App-Doh
 
 [Prereqs]
 perl              = 5.010001
-namespace::sweep  = 0.006
+namespace::autoclean = 0.19
 strictures        = 1.004004
 App::Ack          = 2.12
 Class::Usul       = v0.43.0
