@@ -11,7 +11,7 @@
 [% IF ! page.editing && page.mode != 'static' -%]
       behaviour.config.anchors[ 'create-file' ]
          = { method  : 'modalDialog',
-             args    : [ '[% uri_for( 'dialog' ) %]?auth=1&name=create', {
+             args    : [ '[% uri_for( 'dialog' ) %]?name=create', {
                 name : 'create_file',
                 title: '[% loc( 'Create File' ) %]' } ] };
       behaviour.config.anchors[ 'delete-file' ]
@@ -20,7 +20,7 @@
                 '[% loc( 'Are you sure you want to delete this file?' ) %]' ] };
       behaviour.config.anchors[ 'rename-file' ]
          = { method  : 'modalDialog',
-             args    : [ '[% uri_for( 'dialog' ) %]?auth=1&name=rename', {
+             args    : [ '[% uri_for( 'dialog' ) %]?name=rename', {
                 name : 'rename_file',
                 title: '[% loc( 'Rename File' ) %]',
                 value: '[% page.url %]' } ] };
@@ -31,7 +31,7 @@
                 title: '[% loc( 'Search Documents' ) %]' } ] };
       behaviour.config.anchors[ 'upload-file' ]
          = { method  : 'modalDialog',
-             args    : [ '[% uri_for( 'dialog' ) %]?auth=1&name=upload', {
+             args    : [ '[% uri_for( 'dialog' ) %]?name=upload', {
                 name : 'upload_file',
                 title: '[% loc( 'Upload File' ) %]',
                 value: '[% page.url %]' } ] };
