@@ -1,5 +1,5 @@
 <!-- Rename File -->
-<form action="[% links.base_uri %]?auth=1"
+<form action="[% links.base_uri %]"
      enctype="application/x-www-form-urlencoded"
       method="post" name="rename-file">
    <input   name="old_path" type="hidden"  value="[% page.old_path %]">
