@@ -1,5 +1,5 @@
 <!-- Upload File -->
-<form action="[% uri_for( 'assets' ) %]?auth=1"
+<form action="[% uri_for( 'assets' ) %]"
      enctype="multipart/form-data" method="post" name="upload-file">
    <input class="pathname" id="upload-path"
       placeholder="Choose File" disabled="disabled">
